Fixed mobile modal.

--- a/pastelka/index.html
+++ b/pastelka/index.html
@@ -595,7 +595,7 @@
                             </div>
 
                             <!--START modal-login-->
-                            <div class="modal fade" id="modalLogin">
+                            <div class="modal fade active" id="modalLogin">
                                 <div class="wrapModalGlobal">
                                     <div class="modal-dialog modal-md">
                                         <div class="modalLogin modalGlobal">
