Fixed mobile modal.

--- a/pastelka/index.html
+++ b/pastelka/index.html
@@ -586,16 +586,16 @@
                         </div>
                         <div class="col-xs-4 col-md-2 pull-right">
                             <div class="enterToSite">
-                                <a class="logIn" data-toggle="modal" data-target="#modalLogin">
+                                <button class="logIn" data-toggle="modal" data-target="#modalLogin">
                                     <span class="icon-enter"></span>
-                                </a>
+                                </button>
                                 <a class="singUp">
                                     <span class="icon-person"></span>
                                 </a>
                             </div>
 
                             <!--START modal-login-->
-                            <div class="modal fade active" id="modalLogin">
+                            <div class="modal fade" id="modalLogin">
                                 <div class="wrapModalGlobal">
                                     <div class="modal-dialog modal-md">
                                         <div class="modalLogin modalGlobal">
