Fixed mobile modal.

--- a/pastelka/index.html
+++ b/pastelka/index.html
@@ -584,14 +584,14 @@
                                 </ul>
                             </nav>
                         </div>
-                        <div class="col-xs-4 col-md-2 pull-right">
+                        <div class="col-xs-5 col-md-2 pull-right">
                             <div class="enterToSite">
                                 <button class="logIn" data-toggle="modal" data-target="#modalLogin">
                                     <span class="icon-enter"></span>
                                 </button>
-                                <a class="singUp">
+                                <button class="singUp">
                                     <span class="icon-person"></span>
-                                </a>
+                                </button>
                             </div>
 
                             <!--START modal-login-->
