--- a/pastelka/index.html
+++ b/pastelka/index.html
@@ -547,7 +547,7 @@
                                 </ul>
                             </li>
                             <li class="mobileMenuItem">
-                                <a href="#" class="mobileMenuLink">Как сдалать заказ</a>
+                                <a href="#" class="mobileMenuLink">Как сделать заказ</a>
                             </li>
                             <li class="mobileMenuItem">
                                 <a href="#" class="mobileMenuLink">Доставка</a>
@@ -602,7 +602,7 @@
                                         <div class="modalLogin modalGlobal">
                                             <div class="modalHeader">
                                                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="icon-close"></span></button>
-                                                <h2 class="modalTitle">Bxoд в интеренет-магазин</h2>
+                                                <h2 class="modalTitle">Bxoд в интернет-магазин</h2>
                                             </div>
                                             <div class="modalBody">
                                                 <div class="modalForm">
@@ -1367,15 +1367,6 @@
 
         <!--START slider-->
         <div class="container">
-
-            <!--START breadcrumb-->
-            <!--<ol class="breadcrumb">-->
-                <!--<li><a href="#">Главная</a></li>-->
-                <!--<li><a href="#">Библиотека</a></li>-->
-                <!--<li class="active">Данные</li>-->
-            <!--</ol>-->
-            <!--END breadcrumb-->
-
             <div class="homePageSlider">
                 <div id="carousel" class="carousel slide" data-ride="carousel">
 
